# MOT_Tracking

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: botsort.yaml  bytetrack.yaml  default.yaml  kaggle.yaml  smoke.yaml
outputs/: metrics.json
scripts/: benchmark.py  evaluate.py  export_onnx.py  make_gif.py  prepare_dataset.py  track.py  train.py
src/mot_pipeline/: __init__.py  config.py
src/mot_pipeline/benchmark/: __init__.py  speed.py
src/mot_pipeline/data/: __init__.py  convert.py  dataset_yaml.py  mot17.py  prepare.py  split.py
src/mot_pipeline/detection/: __init__.py  evaluate.py  train.py
src/mot_pipeline/evaluation/: __init__.py  mot_metrics.py  report.py
src/mot_pipeline/export/: __init__.py  onnx.py
src/mot_pipeline/tracking/: __init__.py  gif.py  track.py  visualize.py
src/mot_pipeline/utils/: __init__.py  cli.py  experiment.py  logging.py  metrics_io.py  mot_format.py  paths.py  seed.py  timing.py
tests/: conftest.py  test_benchmark.py  test_config.py  test_convert.py  test_mot_format.py  test_split.py
