[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mot-pipeline"
version = "0.1.0"
description = "Real-time multi-object tracking pipeline: YOLO26n detection + BoT-SORT/ByteTrack on MOT17, with ONNX export and full MOT metrics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Luke" }]

dependencies = [
  "ultralytics>=8.3,<9.0",
  "onnx>=1.16,<2.0",
  "onnxruntime>=1.18,<2.0",
  "opencv-python>=4.9,<5.0",
  "numpy>=1.26,<2.0",
  "pandas>=2.2,<3.0",
  "matplotlib>=3.8,<4.0",
  "lap>=0.5,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "pyyaml>=6.0,<7.0",
  "mlflow>=2.13,<3.0",
  "motmetrics>=1.4,<2.0",
  "imageio>=2.34,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "types-PyYAML>=6.0,<7.0",
  "pre-commit>=3.7,<4.0",
]
trackeval = [
  "trackeval @ git+https://github.com/JonathonLuiten/TrackEval.git",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.10"
# Off: lazily-imported deps (cv2, imageio) aren't installed in the lightweight
# local venv, so the same type: ignore comments are "unused" here but needed in CI.
warn_unused_ignores = false
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests that need real datasets/models (deselected by default in CI)",
]
addopts = "-m 'not slow'"
